# ethanpolars

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demean_example.py
src/ethanpolars/: __init__.py  transforms.py
tests/: test_transforms.py
