[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ethanpolars"
version = "0.3.1"
description = "Utility functions for working with Polars dataframes"
readme = "README.md"
authors = [
    { name = "Ethan MacCumber", email = "ethanmacc@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
requires-python = ">=3.9"
dependencies = [
    "numba>=0.57.0",
    "numpy>=1.22.0",
    "polars>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]

[project.urls]
"Homepage" = "https://github.com/ethanmaccumber/ethanpolars"
"Bug Tracker" = "https://github.com/ethanmaccumber/ethanpolars/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ethanpolars"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
